--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "test": "jest"
+    "test": "jest --coverage --verbose"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -18,6 +18,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
+    "sinon": "^9.2.4",
     "vue-jest": "^3.0.4"
   }
 }
